Upgrade to OpenAPI 3.0
